--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "url": "https://github.com/mediocre/pitney-bowes.git"
   },
   "scripts": {
-    "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec test/* && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --exit --report lcovonly -- -R spec test/* && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "test": "mocha --exit --reporter spec test"
   },
   "version": "0.0.1"
