--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "description": "The Pitney Bowes Complete Shipping APIs let you integrate shipping services from multiple carriers, including USPS® and Newgistics®, into your services and applications.",
   "devDependencies": {
     "coveralls": "*",
-    "istanbul": "*",
-    "mocha": "*"
+    "mocha": "*",
+    "nyc": "*"
   },
   "keywords": [
     "logistics",
@@ -24,7 +24,7 @@
     "url": "https://github.com/mediocre/pitney-bowes.git"
   },
   "scripts": {
-    "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- --exit -R spec test/* && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "test": "mocha --exit --reporter spec test"
   },
   "version": "0.2.0"
