--- a/.github/workflows/continuousIntegration.yaml
+++ b/.github/workflows/continuousIntegration.yaml
@@ -6,11 +6,17 @@ jobs:
   test:
     runs-on: ubuntu-18.04
 
+    strategy:
+      matrix:
+        node-version: [14.13.0, 12.18.4]
+        mongodb-version: [3.6.19]
+        redis-version: [4.0.14]
+
     steps:
-    - name: Setup Node 14.11.0
+    - name: Setup Node ${{ matrix.node-version }} 
       uses: actions/setup-node@v1
       with:
-        node-version: 12.18.4
+        node-version:  ${{ matrix.node-version }}
 
     - name: Checkout from Git
       uses: actions/checkout@v2
@@ -33,12 +39,16 @@ jobs:
         API_KEY: ${{ secrets.API_KEY }}
         API_SECRET: ${{ secrets.API_SECRET }}
 
+  notify_slack:
+    if: always()
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
     - name: Notify Slack
-      if: always()
       uses: homoluctus/slatify@master
       with:
-        type: ${{ job.status }}
-        job_name: '${{ github.repository }} - Tests '
+        type: ${{ needs.test.result }}
+        job_name: '${{ github.repository }} - Tests'
         channel: '#development'
         url: ${{ secrets.SLACK_WEBHOOK_URL }}
         commit: true
