--- a/.github/workflows/continuousIntegration.yaml
+++ b/.github/workflows/continuousIntegration.yaml
@@ -8,9 +8,9 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.9.0, 14.15.0]
-        mongodb-version: [3.6.19]
-        redis-version: [4.0.14]
+        node-version: [12.19.0, 14.15.0]
+        mongodb-version: [3.6.19, 4.0.22]
+        redis-version: [4.0.14, 6.0.10]
 
     steps:
     - name: Setup Node ${{ matrix.node-version }} 
