--- a/.github/workflows/continuousIntegration.yaml
+++ b/.github/workflows/continuousIntegration.yaml
@@ -10,7 +10,7 @@ jobs:
       matrix:
         node-version: [12.19.0, 14.15.0]
         mongodb-version: [3.6.19, 4.0.22]
-        redis-version: [4.0.14, 6.0.10]
+        redis-version: [4.0.14]
 
     steps:
     - name: Setup Node ${{ matrix.node-version }} 
@@ -25,11 +25,6 @@ jobs:
 
     - name: Install ESLint
       run: npm install -g eslint
-
-    # - name: poison pill
-    #   run: |-
-    #     set -x
-    #     echo ${{ matrix.node-version }} |grep 14.13.0
 
     - name: Run ESLint
       run: eslint .
