--- a/.github/workflows/continuousIntegration.yaml
+++ b/.github/workflows/continuousIntegration.yaml
@@ -71,7 +71,7 @@ jobs:
       with:
         type: ${{ needs.test.result }}
         job_name: '${{ github.repository }} - Tests'
-        channel: '#development'
+        channel: '#pitney-bowes'
         url: ${{ secrets.SLACK_WEBHOOK_URL }}
         commit: true
         token: ${{ secrets.GITHUB_TOKEN }}
