--- a/.github/workflows/continuousIntegration.yaml
+++ b/.github/workflows/continuousIntegration.yaml
@@ -8,12 +8,12 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.19.0, 14.16.0]
-        mongodb-version: [3.6.19, 4.0.22]
+        mongodb-version: [4.0.23]
+        node-version: [12.9.0, 14.16.1]
         redis-version: [4.0.14]
-
+    
     env:
-      DO_COVERALLS: 14.16.0/4.0.22/4.0.14
+      DO_COVERALLS: 14.16.1/4.0.23/4.0.14
 
     steps:
     - name: Setup Node ${{ matrix.node-version }} 
