--- a/.github/workflows/continuousIntegration.yaml
+++ b/.github/workflows/continuousIntegration.yaml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         mongodb-version: [4.0.23]
-        node-version: [12.9.0, 14.15.1]
+        node-version: [14.15.1]
         redis-version: [4.0.14]
     
     env:
