--- a/.github/workflows/continuousIntegration.yaml
+++ b/.github/workflows/continuousIntegration.yaml
@@ -1,6 +1,6 @@
 name: build
 
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   test:
@@ -11,12 +11,12 @@ jobs:
         mongodb-version: [4.0.23]
         node-version: [14.15.1]
         redis-version: [4.0.14]
-    
+
     env:
       DO_COVERALLS: 14.15.1/4.0.23/4.0.14
 
     steps:
-    - name: Setup Node ${{ matrix.node-version }} 
+    - name: Setup Node ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version:  ${{ matrix.node-version }}
