--- a/.github/workflows/continuousIntegration.yaml
+++ b/.github/workflows/continuousIntegration.yaml
@@ -32,6 +32,8 @@ jobs:
 
     - name: Run ESLint
       run: eslint .
+      env:
+        ESLINT_USE_FLAT_CONFIG: false
 
     - name: Run npm install
       run: npm install
